# bukid-dito

./: .gitignore  README.md  chart.py  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
output/: vegetable_schedule.json
pages/: feedback.py  garden_designer_page.py
src/bukid/: crew.py  main.py  panel_gantt_app.py
src/bukid/config/: agents.yaml  tasks.yaml
src/bukid/models/: models.py
src/bukid/sample_response/: plant_finder.txt  plant_researcher.txt  vegetable_market_researcher.txt  weather_historian.txt
src/bukid/tools/: generate_gantt_with_json.py
