[project]
name = "bukid"
version = "0.1.0"
description = "bukid using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]==1.9.3"
]

[project.scripts]
bukid = "bukid.main:run"
run_crew = "bukid.main:run"
train = "bukid.main:train"
replay = "bukid.main:replay"
test = "bukid.main:test"
run_with_trigger = "bukid.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
